Add Language selection in settings dialog
- The application has been prepared for internationalization. But hardly a user will know and change a setting in an application configuration file.
- Now there is a language selection in the settings dialog which lists all the found resource file cultures.
- An application restart is required for the change to take effect.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -819,4 +819,7 @@ Durch die Aktivierung wird die Speichernutzung während des Betriebs basierend a
   <data name="ToolTipLanguageDescription" xml:space="preserve">
     <value>Wählen Sie die gewünschte Anzeigesprache aus der Liste aus.</value>
   </data>
+  <data name="LanguageHint" xml:space="preserve">
+    <value>* Neustart des Programm notwendig</value>
+  </data>
 </root>
